# gdsii

./: .gitignore  Cargo.toml  README.md
examples/: bench_parse.rs  gen_large_gds.rs
src/: float.rs  lib.rs  parser.rs  reader.rs  types.rs  writer.rs
tests/: bench.txt  parser_integration.rs  writer_roundtrip.rs
tests/data/: basic.gds  example-hexdump.txt  example.gds  nested_hierarchy_test.gds  poly_res.gds
