[package]
name = "gdsii"
version = "0.1.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "GDSII Rust toolkit library."
exclude = ["./tests/"]

[dependencies]
serde = "1.0.228"
thiserror = "2.0.18"
zerocopy = { version  = "0.8.48", features = ["derive"]}
zerocopy-derive = "0.8.48"

[lints.clippy]
# See: <https://rust-lang.github.io/rust-clippy/master/index.html.
all = { level = "warn" }
pedantic = { level = "warn" }
nursery = { level = "warn" }

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
