[package]
name = "gdsii"
version = "0.2.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
edition = "2024"
description = "Fast, zero-copy, streaming GDSII parser and writer."
readme = "README.md"
license = "MIT"
repository = "https://github.com/micahkepe/gdsii"
homepage = "https://github.com/micahkepe/gdsii"
keywords = ["gdsii", "gds", "eda", "layout", "parser"]
exclude = ["tests/data/", "examples/", ".github/"]

[dependencies]
thiserror = "2.0.18"
zerocopy = { version  = "0.8.48", features = ["derive"]}

[lints.clippy]
# See: <https://rust-lang.github.io/rust-clippy/master/index.html>
all = { level = "warn" }
pedantic = { level = "warn" }
nursery = { level = "warn" }

[dev-dependencies]
gds21 = "0.2.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
